--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.21.16",
+    "mysql2": "^2.2.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
