--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "setup-dbs": "ts-node src/db/schema.ts",
-    "start": "ts-node src/index.ts",
-    "test": "jest **/*.spec.ts"
+    "start": "ts-node src/listen.ts",
+    "test": "jest"
   },
   "author": "Matthew Daley",
   "license": "MIT",
@@ -19,8 +19,12 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/knex": "^0.16.1",
     "@types/node": "^14.14.21",
+    "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
+    "supertest": "^6.1.1",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
