--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.16",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
@@ -24,6 +25,7 @@
     "@types/knex": "^0.16.1",
     "@types/node": "^14.14.21",
     "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
     "supertest": "^6.1.1",
     "ts-jest": "^26.4.4",
