--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
+    "node-mocks-http": "^1.10.1",
     "supertest": "^6.1.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
