--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Matthew Daley",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.16",
@@ -20,6 +21,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/knex": "^0.16.1",
