--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "include": ["src"],
-  "output": ["dist"],
+  "exclude": ["node_modules", "**/*.spec.ts"],
   "compilerOptions": {
     "strict": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "outDir": "dist"
   }
 }
