--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/knex": "^0.16.1",
     "@types/node": "^14.14.21",
+    "@types/sinon": "^9.0.10",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
     "node-mocks-http": "^1.10.1",
+    "sinon": "^9.2.4",
     "supertest": "^6.1.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
